--- a/RegistrationSeleniumTests/packages.config
+++ b/RegistrationSeleniumTests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="2.53.1" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.23.0.1" targetFramework="net461" />
   <package id="Selenium.WebDriver.IEDriver" version="2.53.1.1" targetFramework="net461" />
