--- a/RegistrationSeleniumTests/RegistrationSeleniumTests.csproj
+++ b/RegistrationSeleniumTests/RegistrationSeleniumTests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="DriverType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scenario.cs" />
     <Compile Include="ScenarioExecutor.cs" />
     <Compile Include="SerializationHelper.cs" />
     <Compile Include="Step.cs" />
