--- a/RegistrationSeleniumTests/RegistrationSeleniumTests.csproj
+++ b/RegistrationSeleniumTests/RegistrationSeleniumTests.csproj
@@ -61,12 +61,15 @@
     <Compile Include="Scenario.cs" />
     <Compile Include="ScenarioExecutor.cs" />
     <Compile Include="SerializationHelper.cs" />
-    <Compile Include="Step.cs" />
-    <Compile Include="StepAction.cs" />
+    <Compile Include="Action.cs" />
+    <Compile Include="ActionType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Scenarios\AbnBnGstCo.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.2.23.0.1\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.2.23.0.1\build\Selenium.WebDriver.ChromeDriver.targets')" />
