--- a/RegistrationSeleniumTests/packages.config
+++ b/RegistrationSeleniumTests/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="NUnit" version="3.4.1" targetFramework="net461" />
   <package id="Selenium.Support" version="2.53.1" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="2.53.1" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.23.0.1" targetFramework="net461" />
